add some command,fix mixin error